# yas_example_crud_handler

./: .gitignore  README.rst  requirements.txt  setup.cfg  setup.py
etc/yas/: example.yml
yas_example_crud_handler/: __init__.py  configuration.py
yas_example_handlers/: __init__.py  configuration.py
