[metadata]
name = Yas Example CRUD Handler
summary = Just an example
description-file = README.rst
classifier =
    Environment :: Plugins
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Topic :: Communications :: Chat

[files]
packages =
    yas_example_crud_handler
data_files =
    etc/yas =
        etc/yas/example_crud_handler.yml
