[metadata]
name = YasExampleHandlers
summary = Just some examples
description-file = README.rst
author = Brandon Schlueter
author_email = yas@schlueter.blue
url = https://github.com/schlueter/YasExampleHandlers
classifier =
    Environment :: Plugins
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Topic :: Communications :: Chat

[files]
packages =
    yas_example_handlers
data_files =
    etc/yas/handlers =
        etc/yas/handlers/example.yml
